[project]
name = "quickstart-python"
version = "0.0.0"
description = "Chronary 60-second quickstart — pure SDK, no LLM"
requires-python = ">=3.10"
dependencies = [
    "chronary>=0.1.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
